--- a/react-test/index.html
+++ b/react-test/index.html
@@ -4,7 +4,10 @@
    
   </head>
   <body>
+  	
   	<div id="root"></div>
-    <script src="build/bundle.js"></script>
+  	
+	<script src="assets/bundle.js"></script>
+    
   </body>
 </html>
