--- a/react-test/index.html
+++ b/react-test/index.html
@@ -1,13 +1,10 @@
-<html>
-  <head>
-    <title>webpack 2 demo</title>
-   
-  </head>
-  <body>
-  	
-  	<div id="root"></div>
-  	
-	<script src="assets/bundle.js"></script>
-    
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Document1</title>
+</head>
+<body>
+  <script src="bundle.js"></script>
+</body>
 </html>
