--- a/react-test/counter/index.html
+++ b/react-test/counter/index.html
@@ -1,9 +1,10 @@
 <html>
+	<meta charset="utf-8">
 	<head>
 		<link rel="stylesheet" type="text/css" href="counter.css" />
 	</head>
   <body>
-   	<div id='caculator-container'></div>
+   	<div id='root'></div>
     <script src="bundle.js"></script>
   </body>
 </html>
